# Pitchlab

./: .gitignore  CLAUDE.md  PROJECT_ARCH.md  README.md  docker-compose.yml  findings.md  package-lock.json  package.json  progress.md  task_plan.md
.antigravity/: mcp.json
engine/: README.md  pyproject.toml
engine/pitchlab/: __init__.py  cli.py  mcp_server.py
engine/pitchlab/agent/: __init__.py  pipeline.py  runlog.py  taskgraph.py
engine/pitchlab/backtest/: __init__.py  harness.py
engine/pitchlab/cleaning/: __init__.py  names.py  normalize.py  seed_aliases.py
engine/pitchlab/data/: __init__.py  fixtures_export.py  footballdata.py  footballdataorg.py  internationals.py  mock.py  schema.py  theoddsapi.py
engine/pitchlab/feedback/: __init__.py  clv_backfill.py  export.py  settle.py  snapshot.py  weekly_digest.py
engine/pitchlab/league/: __init__.py  elo.py  export.py  features.py  predict.py
engine/pitchlab/markets/: __init__.py  derive.py
engine/pitchlab/metrics/: __init__.py  brier.py  calibration.py  clv.py  roi.py
engine/pitchlab/models/: __init__.py  beta_calibrator.py  calibration.py  dixon_coles.py  ml_challenger.py  promotion.py  shadow.py
engine/scripts/: test_fetch.py
engine/tests/: test_agent.py  test_beta_calibration.py  test_calibration.py  test_cleaning.py  test_core.py  test_daily_pipeline_dag.py  test_feedback.py  test_fixtures_export.py  test_footballdataorg.py  test_league.py  test_pipeline.py  test_promotion.py  test_report.py  test_settle.py  test_shadow.py  test_strategy.py  test_value.py  test_weekly_digest.py  test_worldcup.py
(+301 files in other folders)
