[project]
name = "pitchlab-engine"
version = "0.1.0"
description = "PitchLab Phase 0 Truth Machine: quantitative football model + walk-forward backtest with CLV"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "requests>=2.31",
    "mcp>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]
ml = [
    "scikit-learn>=1.3",
]

[project.scripts]
pitchlab = "pitchlab.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pitchlab*"]
